# odrive_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
cfg/: JointPosition.cfg
config/: joint_configs.yaml
launch/: arm_joint_controllers.launch
msg/: JointAngleCommand.msg
scripts/: odrive_node
src/odrive_ros/: odrive_controller.py
