<?xml version="1.0"?>
<package format="2">
  <name>odrive_ros</name>
  <version>0.0.0</version>
  <description>The odrive package</description>

  <maintainer email="brandon@kinmantech.org">Brandon Kinman</maintainer>
  <author email="brandon@kinmantech.org">Brandon Kinman</author>
 
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
